# sparkMeasure

./: .ciux  .gitignore  .travis.yml  Dockerfile  README.md  build.sbt  pom.xml  run_pytest.sh
.devcontainer/: devcontainer.json
.github/workflows/: build_with_scala_and_python_tests.yml  e2e.yml  e2e.yml.disabled  scala_tests.yml
docs/: Flight_recorder_DBwrite.md  Flight_recorder_mode.md  Flight_recorder_mode_FileSink.md  Flight_recorder_mode_InfluDBSink.md  Flight_recorder_mode_InfluxDBSink.md  Flight_recorder_mode_KafkaSink.md  Flight_recorder_mode_PrometheusPushgatewaySink.md  Instrument_Python_code.md  Instrument_Scala_code.md  Notes_on_implementation_details.md  Notes_on_metrics_analysis.md  Prometheus.md  Prometheus_through_JMX.md  Python_shell_and_Jupyter.md  Reference_SparkMeasure_API_and_Configs.md  Scala_shell_and_notebooks.md  TODO_and_issues.md  Unit-tests.md  prometheus.md
e2e/: argocd.sh  build.sh  check-metrics.sh  prereq.sh  push-image.sh  run-all.sh
e2e/charts/apps/: Chart.yaml  values.yaml
e2e/charts/apps/templates/: prereq-spark-operator.yaml  spark-jobs.yaml  spark-operator.yaml
e2e/charts/spark-jobs/: Chart.yaml  values.yaml
e2e/charts/spark-jobs/templates/: jmx-configmap.yaml  spark-pi.yaml  spark-sql.yaml
e2e/rootfs/opt/spark/examples/: spark-pi.py  spark-sql.py
examples/: Example_Notebooks_Databricks.md  README.md  SparkMeasure_Jupyer_Python_getting_started.ipynb  SparkMeasure_Jupyter_Azure_Example.ipynb  SparkMeasure_Jupyter_Colab_Example.ipynb  SparkMeasure_Jupyter_Python_getting_started.ipynb  SparkTaskMetricsAnalysisExample.ipynb  test_sparkmeasure_python.py
examples/testSparkMeasureScala/: README.md  build.sbt
examples/testSparkMeasureScala/src/main/scala/: testSparkMeasure.scala
project/: build.properties  plugins.sbt  sonatype.sbt
python/: pyproject.toml  requirements.txt  setup.py  sparkmeasure.py
python/sparkmeasure/: __init__.py  jmx.py  stagemetrics.py  taskmetrics.py  test_jmx.py  test_stagemetrics.py  test_taskmetrics.py  testutils.py
src/main/scala/ch/cern/sparkmeasure/: AppEventKafkaSink.scala  DropwizardMetrics.scala  FlightRecorder.scala  IOUtils.scala  InfluxDBSink.scala  KafkaSink.scala  KafkaSinkV2.scala  PushGateway.scala  PushGatewaySink.scala  README.md  StageInfoRecorderListener.scala  StageMetrics.scala  TaskInfoRecorderListener.scala  TaskMetrics.scala  Utils.scala  flightrecorder.scala  influxdbsink.scala  ioutils.scala  kafkasink.scala  pushgateway.scala  stagemetrics.scala  taskmetrics.scala  utils.scala
src/test/scala/ch/cern/sparkmeasure/: KafkaSinkV2Test.scala  StageMetricsTest.scala  TaskMetricsTest.scala  UtilsTest.scala  pushgatewayTest.scala
